--- a/flaskr/templates/blog/posts/protein_sources.html
+++ b/flaskr/templates/blog/posts/protein_sources.html
@@ -40,3 +40,4 @@
 <p>
     I do not eat protein supplements, but pea + rice powder is very good if you are struggling to get enough protein from whole foods. This also addresses a potential concern of plant-based diets and "anti-nutrients" such as fiber which may inhibit nutrient digestion. I don't think amino acid profiles are worth getting into the weeds over unless you are really trying to maximize muscle growth, but a good rule of thumb is to mix protein sources to balance the weakness of any one food - for example I eat cereal with soy milk and a couple peanut butter and jelly sandwiches on whole wheat bread for breakfast so I get corn, legumes, and wheat protein in one meal.
 </p>
+{% endblock %}
